--- a/faiktribunu/Info.plist
+++ b/faiktribunu/Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>2.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>3</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
@@ -51,6 +51,8 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Fotoğraf Galerinize Erişim İzni</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
